--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
-    <title>https://beyourbest.co.ke/</title>
+    <title>beyourbest.co.ke/</title>
   </head>
   <body>
     <div id="root"></div>
